@@ -1,3 +1,13 @@
+Sat Sep 23 04:31:13 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>
+
+        * DAnCE/RepositoryManager/RepositoryManager_Impl.cpp
+        * DAnCE/RepositoryManager/RepositoryManager_Impl.h
+        * DAnCE/RepositoryManager/RMadmin.cpp
+        * ciao/RepositoryManager.idl
+        Added the replace argument in installPackage () and createPackage ()
+        functions and extend the functionalities of these two functions based
+        on the latest D&C spec.
+
 Sat Sep 23 04:07:59 UTC 2006  Shanshan Jiang <shanshan.jiang@vanderbilt.edu>
 
         * DAnCE/Plan_Generator
